@@ -32,9 +32,11 @@
  * URL: http://www.morganclaypool.com/doi/abs/10.2200/S00468ED1V01Y201301ICR025
  *
  * Copyright statement:
- * --------------------
+ * ====================
  * (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
- *     http://www.semanticmetadata.net/lire, http://www.lire-project.net
+ *  http://www.semanticmetadata.net/lire, http://www.lire-project.net
+ *
+ * Updated: 13.02.15 18:52
  */
 
 package net.semanticmetadata.lire.impl;
@@ -74,6 +76,8 @@ public class SimpleBuilder extends AbstractDocumentBuilder {
     private KeypointDetector kpdetect = KeypointDetector.Random;
     public enum KeypointDetector {CVSURF, CVSIFT, Random, GaussRandom};
     private int samples = 600;
+
+    final int[] sizeLookUp = new int[] {40, (int) (40 * 1.6), (int) (40 * 2.3), 40 * 3};
 
     public SimpleBuilder() {
     }
@@ -144,13 +148,23 @@ public class SimpleBuilder extends AbstractDocumentBuilder {
 
     private Field[] useRandom(BufferedImage image) {
         ArrayList<Field> fields = new ArrayList<Field>();
-        LinkedList<keypoint> keypointsList = createRndPts(image.getWidth(), image.getHeight(), samples);
-        keypoint next;
-        for (Iterator<keypoint> iterator = keypointsList.iterator(); iterator.hasNext(); ) {
-            next = iterator.next();
-            lireFeature.extract(ImageUtils.cropImage(image, (int) (next.X), (int) (next.Y), (int) next.Size, (int) next.Size));
-            fields.add(new StoredField(DocumentBuilder.FIELD_NAME_SIMPLE + lireFeature.getFieldName() + Detector_RANDOM, lireFeature.getByteArrayRepresentation()));
+//        LinkedList<keypoint> keypointsList = createRndPts(image.getWidth(), image.getHeight(), samples);
+//        keypoint next;
+        // opting in for more performance: no "new" for creating key points, no String concat in the loop. (ml)
+        int[] myKeypoint = new int[3];
+        Random r = new Random();
+        String fieldName = DocumentBuilder.FIELD_NAME_SIMPLE + lireFeature.getFieldName() + Detector_RANDOM;
+        for (int i = 0; i < samples; i++) {
+            createNextRandomPoint(myKeypoint, image.getWidth(), image.getHeight(), r);
+            lireFeature.extract(ImageUtils.cropImage(image, myKeypoint[0], myKeypoint[1],  myKeypoint[2], myKeypoint[2]));
+            fields.add(new StoredField(fieldName, lireFeature.getByteArrayRepresentation()));
+            
         }
+//        for (Iterator<keypoint> iterator = keypointsList.iterator(); iterator.hasNext(); ) {
+//            next = iterator.next();
+//            lireFeature.extract(ImageUtils.cropImage(image, (int) (next.X), (int) (next.Y), (int) next.Size, (int) next.Size));
+//            fields.add(new StoredField(DocumentBuilder.FIELD_NAME_SIMPLE + lireFeature.getFieldName() + Detector_RANDOM, lireFeature.getByteArrayRepresentation()));
+//        }
         return fields.toArray(new Field[fields.size()]);
     }
 
@@ -158,33 +172,32 @@ public class SimpleBuilder extends AbstractDocumentBuilder {
         ArrayList<Field> fields = new ArrayList<Field>();
         LinkedList<keypoint> keypointsList = createGaussRndPts(image.getWidth(), image.getHeight(), samples);
         keypoint next;
+        String fieldName = DocumentBuilder.FIELD_NAME_SIMPLE + lireFeature.getFieldName() + Detector_GAUSSRANDOM;
         for (Iterator<keypoint> iterator = keypointsList.iterator(); iterator.hasNext(); ) {
             next = iterator.next();
             lireFeature.extract(ImageUtils.cropImage(image, (int) (next.X - (next.Size / 2)), (int) (next.Y - (next.Size / 2)), (int) next.Size, (int) next.Size));
-            fields.add(new StoredField(DocumentBuilder.FIELD_NAME_SIMPLE + lireFeature.getFieldName() + Detector_GAUSSRANDOM, lireFeature.getByteArrayRepresentation()));
+            fields.add(new StoredField(fieldName, lireFeature.getByteArrayRepresentation()));
         }
         return fields.toArray(new Field[fields.size()]);
     }
 
     private LinkedList<keypoint> createRndPts(int width, int height, int samples){
         Random ran = new Random();
-
         int size = -1;
-        int sizeTemp;
         keypoint key;
         LinkedList<keypoint> keypointsList = new LinkedList<keypoint>();
         for (int i = 0; i < samples; i++) {
-            sizeTemp = ran.nextInt(4);
-            if (sizeTemp == 0) {
-                size = 40;
-            } else if (sizeTemp == 1) {
-                size = (int) (40 * 1.6);
-            } else if (sizeTemp == 2) {
-                size = (int) (40 * 2.3);
-            } else if (sizeTemp == 3) {
-                size = (int) (40 * 3);
-            }
-
+//            sizeTemp = ran.nextInt(4);
+//            if (sizeTemp == 0) {
+//                size = 40;
+//            } else if (sizeTemp == 1) {
+//                size = (int) (40 * 1.6);
+//            } else if (sizeTemp == 2) {
+//                size = (int) (40 * 2.3);
+//            } else if (sizeTemp == 3) {
+//                size = (int) (40 * 3);
+//            }
+            size = sizeLookUp[ran.nextInt(4)];
             key = new keypoint(ran.nextInt(width - size), ran.nextInt(height - size), size);
 //            System.out.println("(" + (key.X) + "," + (key.Y) + ")\t" + key.Size);
             keypointsList.add(key);
@@ -192,6 +205,14 @@ public class SimpleBuilder extends AbstractDocumentBuilder {
 
         return keypointsList;
     }
+
+    private void createNextRandomPoint(int[] myKeypoint, int width, int height, Random random) {
+        myKeypoint[2] = sizeLookUp[random.nextInt(4)];
+        myKeypoint[0] = random.nextInt(width-myKeypoint[2]);
+        myKeypoint[1] = random.nextInt(height-myKeypoint[2]);
+    }
+
+
 
     private LinkedList<keypoint> createGaussRndPts(int width, int height, int samples){
         Random ran = new Random();
@@ -207,17 +228,17 @@ public class SimpleBuilder extends AbstractDocumentBuilder {
         keypoint key;
         LinkedList<keypoint> keypointsList = new LinkedList<keypoint>();
         for (int i = 0; i < samples; i++) {
-            sizeTemp = ran.nextInt(4);
-            if (sizeTemp == 0) {
-                size = 40;
-            } else if (sizeTemp == 1) {
-                size = (int) (40 * 1.6);
-            } else if (sizeTemp == 2) {
-                size = (int) (40 * 2.3);
-            } else if (sizeTemp == 3) {
-                size = (int) (40 * 3);
-            }
-
+//            sizeTemp = ran.nextInt(4);
+//            if (sizeTemp == 0) {
+//                size = 40;
+//            } else if (sizeTemp == 1) {
+//                size = (int) (40 * 1.6);
+//            } else if (sizeTemp == 2) {
+//                size = (int) (40 * 2.3);
+//            } else if (sizeTemp == 3) {
+//                size = (int) (40 * 3);
+//            }
+            size = sizeLookUp[ran.nextInt(4)];
             sizeLimit = size / 2;
             widthLimit = width - sizeLimit;
             heightLimit = height - sizeLimit;
